keycloak/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    name: keycloak
    istio-injection: enabled
