keycloak/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak
  namespace: keycloak
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "sso.yeongmin.kr"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTP
      hosts:
        - 'sso.yeongmin.kr'
