keycloak/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  hosts:
    - "sso.yeongmin.kr"
  gateways:
    - keycloak
  http:
    - name: "default-routes"
      route:
        - destination:
            host: keycloak
            port:
              number: 80
